[package]
name = "rustproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"
tonic = "0.12"
prost = "0.13"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[[bin]]
name = "rustproxy"
path = "src/main.rs"

[[bin]]
name = "demo-backend"
path = "src/bin/demo_backend.rs"

[[bin]]
name = "loadgen"
path = "src/bin/loadgen.rs"

[profile.release]
lto = true
codegen-units = 1
